--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Drift page</title>
-  <link rel="stylesheet"href="C:\Users\User\Desktop\styles.css">
+  <link rel="stylesheet"href="styles.css">
 </head>
 <body>
   <header>
